Update and rename Task 2.ipynb to OptimalClusterNumber.ipynb

--- a/OptimalClusterNumber.ipynb
+++ b/OptimalClusterNumber.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2. Optimul number of clusters of Iris dataset"
+    "##  Optimul number of clusters of Iris dataset"
    ]
   },
   {
